<resources>
    <string name="app_name">Exif Thumbnail Adder</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_working_dir_perm">Working dir permissions</string>
    <string name="action_settings">Settings</string>
    <string name="action_sync">Sync. deletions</string>
    <string name="action_about">About</string>
    <string name="action_add_thumbs">Add thumbnails</string>
    <string name="about_about_title">About</string>
    <string name="about_content">About…</string>
    <string name="about_version">Version</string>
    <string name="about_homepage_source">Project homepage &amp; source code:</string>
    <string name="about_license">License:</string>
    <string name="about_authors">Authors:</string>
    <string name="about_translations">Translations</string>
    <string name="about_anonymous">anonymous</string>
    <string name="about_external_libraries">External libraries</string>
    <string name="working_dir_perm_permissions_set_retry">WorkingDir permissions set, please retry.</string>
    <string name="working_dir_button_create_dir_and_set_permissions">Create Dir &amp; set permissions</string>
    <string name="working_dir_text_you_don_t_have_the_permission_to_write">
    You don\'t have the permission to write to the WorkingDirectory or it doesn\'t exist.\n
    \n
    To save the backup of your pictures and store some temporary files, this application uses a directory
    at the root of the volumes carrying the pictures you want to process.\n
    By default it is named \'ThumbAdder\' (this can be changed in the settings).\n
    For this to work, the directory has to exist and it must be permitted to read &amp; write.
    This can be achieved only if you give the application the permission.
    The button below will help you to do this easily.\n
    \n
    Once you click the button some screens will appear and ask you to give access.
    All you have to do is confirm every step.\n
    1. You are asked to confirm the directory name and the location where it is created
    (keep default value)\n
    2. You give permanent read &amp; write access to the working directory.\n
    \n
    \n
    You only have to confirm every screen.\n
    The required values are already set for you.\n
    \n
    Once permissions are set you are redirected to the main screen, and you can start again.\n</string>
    <string name="frag1_text_description">Add thumbnails to pictures from the selected source folders</string>
    <string name="frag1_text_list_of_dirs_to_process">List of source folders to process</string>
    <string name="frag1_text_no_dir_selected">No folder selected. Go to Settings to select.</string>
    <string name="frag1_text_all_files_access_permissions_is_not_granted">\'All files access\' permissions is not granted on your device. You can still use this app normally but please understand that time and date of your files will be set to current time. This does not affect the time/date stored in the EXIF tags of your pictures. You may give permission in settings.</string>
    <string name="frag1_button_settings">Settings</string>
    <string name="frag1_button_start_processing">Start processing</string>
    <string name="stop">Stop</string>
    <string name="frag1_text_processing_log">Processing Log</string>
    <string name="frag1_perm_request_title">Permission request</string>
    <string name="perm_request_message_WRITE_EXTERNAL_STORAGE_for_timestamp">Permission \'%1$s\' is required to keep timestamps of files.\n
        If you deny permission, processing will be done without keeping timestamps.</string>
    <string name="perm_request_message_WRITE_EXTERNAL_STORAGE_using_Files_API">Permission \'%1$s\' is required to be able to read your pictures and modify them.</string>
    <string name="frag1_perm_request_deny">Deny permission</string>
    <string name="perm_request_message_READ_EXTERNAL_STORAGE">Permission \'%1$s\' is required to be able to read your pictures.</string>
    <string name="perm_request_message_ACCESS_MEDIA_LOCATION">Permission \'%1$s\' is required to be able to keep the location information (GPS) stored in your pictures. If not given, this information will be lost.</string>
    <string name="perm_request_message_POST_NOTIFICATIONS">Permission \'%1$s\' is required to display the progress of processing in the notification drawer. It automatically disappears when processing is completed.</string>
    <string name="frag1_continue_without_timestamps">\u00A0Permission not given, continuing without keeping timestamps.</string>
    <string name="frag1_log_skipping_excluded_dir">Skipping excluded dir %1$s in %2$s</string>
    <string name="frag1_log_copying_attr">Copying attributes…</string>
    <string name="frag1_log_starting">Starting…\n</string>
    <string name="frag1_log_stopped_by_user">Stopped by user.</string>
    <string name="frag1_log_processing_dir">Processing %1$s</string>
    <string name="frag1_log_processing_path_filename">Processing… Path: %1$s Filename: %2$s</string>
    <string name="frag1_log_skipping_path_filename">Skipping… Path: %1$s Filename: %2$s</string>
    <string name="frag1_log_checking_workingdir_perm_v2">⋅ access to working directory:</string>
    <string name="frag1_log_checking_srcdir_perm">⋅ access to source directory:</string>
    <string name="frag1_log_checking_perm">Checking permissions…</string>
    <string name="frag1_log_skipping_file_missing">Skipping (file missing)</string>
    <string name="frag1_log_skipping_not_jpeg">Skipping (not JPEG)\n</string>
    <string name="frag1_log_skipping_empty_file">Skipping (empty file)\n</string>
    <string name="frag1_log_skipping_has_thumbnail">Skipping (has thumbnail)\n</string>
    <string name="frag1_log_fix_has_thumbnail_but_missing_tags">Thumbnail present but some fields are missing. → Updating thumbnail…</string>
    <string name="frag1_log_skipping_bad_image">Skipping (bad image?)\n</string>
    <string name="frag1_log_skipping_error">Skipping (ERROR): %1$s</string>
    <string name="frag1_log_continue_despite_error_as_per_setting">Continue processing as per settings…</string>
    <string name="frag1_log_file_exists">File already exists: %1$s</string>
    <string name="frag1_log_finished">\nFinished.</string>
    <string name="frag1_log_pixymeta_missing">Pixymeta-android library not available in this build. Select another library in settings.</string>
    <string name="frag1_log_done">\u00A0Done</string>
    <string name="frag1_log_overwrite_not_allowed">\u00A0Overwriting picture in destination dir not allowed (see settings). Destination file exists. Skipping.</string>
    <string name="frag1_log_cannot_move_to_backup">\u00A0Cannot move picture to backup. File exists. Skipping.</string>
    <string name="frag1_log_successful">\u00A0Successful</string>
    <string name="frag1_log_not_granted">\u00A0Not granted. Please add the folder again in Settings.</string>
    <string name="frag1_log_unsuccessful">\u00A0Failed</string>
    <string name="frag1_log_could_not_copy_timestamp_and_attr">Could not copy file timestamps &amp; attributes: %1$s</string>
    <string name="frag1_log_could_not_store_timestamp_and_attr">Could not store file timestamps &amp; attributes: %1$s</string>
    <string name="frag1_log_error_moving_doc">ERROR moving document: %1$s</string>
    <string name="frag1_log_error_copying_doc">ERROR copying document: %1$s</string>
    <string name="frag1_log_count_files_to_process">%1$d file(s) to process.</string>
    <string name="frag1_log_error">ERROR: %1$s</string>
    <string name="settings_dialog_all_files_access_not_supported">Your device does not support all files access</string>
    <string name="settings_button_remove_all_dirs">Remove all folders</string>
    <string name="settings_button_add_dir">Add</string>
    <string name="settings_option_not_available">Option not available</string>
    <string name="settings_all_files_access_unavailable">This variant of the application doesn\'t permit to give \'All Files Access\' permission.
        \n\nA variant with this feature is available on %1$s.
        \n\nTip: For the installation to succeed you must first uninstall this variant of %2$s.</string>
    <string name="settings_show_in_">Go to %1$s</string>
    <string name="pref_categ_folders">Folders</string>
    <string name="pref_dirToProcess_title">Folders to process</string>
    <string name="pref_workingDir_title"><![CDATA[Backup & working directory]]></string>
    <string name="pref_workingDir_dialogMessage"><![CDATA[This directory contains the backup of the source pictures and also some temporary files created during process. It is located at the root of each volume (phone, sdcard…).\nFor example with the default value, files would be placed into <SDCARD>/ThumbAdder/DCIM.bak or <PHONE_STORAGE>/ThumbAdder/DCIM.bak]]></string>
    <string name="pref_allFilesAccess_title">All files access (for Android 11+ only)</string>
    <string name="pref_allFilesAccess_summary">Gives access to all files on your device. This permits to keep the timestamps of the processed files. The timestamps of your pictures stored in EXIF are not altered whichever value this option has.</string>
    <string name="pref_categ_options">Options</string>
    <string name="pref_rotateThumbnail_title">Rotate thumbnails</string>
    <string name="pref_rotateThumbnail_summary">Rotate thumbnails to correspond to the picture. Most apps need the thumbnail to be rotated (eg. Win10 photo import)</string>
    <string name="pref_skipPicsHavingThumbnail_title">Skip pictures with thumbnail</string>
    <string name="pref_skipPicsHavingThumbnail_summary">If picture already has a thumbnail, skip processing</string>
    <string name="pref_fixHavingThumbnailButMissingTags_title">Fix missing tags in pictures with thumbnail</string>
    <string name="pref_fixHavingThumbnailButMissingTags_summary">If picture has thumbnail but some mandatory tags are missing, process the picture. This replaces the current thumbnail even though you chose to skip files having thumbnails.</string>
    <string name="pref_backupOriginalPic_title">Create backup of source picture</string>
    <string name="pref_backupOriginalPic_summary">Backup is placed in the working directory. If a file with same name exists, it is not overwritten</string>
    <string name="pref_writeThumbnailedToOriginalFolder_title">Update in source location</string>
    <string name="pref_writeThumbnailedToOriginalFolder_summaryOn">Add thumbnail to the picture of the source folder</string>
    <string name="pref_writeThumbnailedToOriginalFolder_summaryOff"><![CDATA[Add thumbnail to a copy of the source picture in the working directory (in \'<Volume>/ThumbAdder/<orig_dir>.new\')]]></string>
    <string name="pref_overwriteDestPic_title">Overwrite picture in destination</string>
    <string name="pref_overwriteDestPic_summary">Override file having same name in the working directory (this doesn\'t affect backups, which are never overwritten)</string>
    <string name="pref_keepTimeStampOnBackup_title">Copy timestamp to backup</string>
    <string name="pref_keepTimeStampOnBackup_summary">If \'%1$s\' is \'off\', copy the timestamp of the source picture to its copy in the backup directory.\nIf \'%1$s\' is \'on\', the timestamp of the backup is always kept.</string>
    <string name="pref_writeTmpToCacheDir_title">Write tmp images to cache dir</string>
    <string name="pref_writeTmpToCacheDir_summaryOn">Write temporary images created during processing to the cache directory of the application</string>
    <string name="sync_text_description"><![CDATA[Synchronize deletions made in source folders to files in backup & working directory]]></string>
    <string name="sync_log_content" />
    <string name="sync_button_del_files">Delete</string>
    <string name="sync_button_list_files">List</string>
</resources>