<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10sp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/add_textview_text_desciption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/frag1_text_description"
            android:textStyle="bold"
            android:background="@drawable/rounded_corner"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frag1_text_list_of_dirs_to_process"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_dir_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frag1_text_no_dir_selected" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/block_allFilesAccess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textview_allFilesAccess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frag1_text_all_files_access_permissions_is_not_granted"
            android:textColor="#FFA500" />

    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <Button
        android:id="@+id/button_addThumbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag1_button_start_processing"
        android:layout_gravity="center_horizontal"
        />
    <Button
        android:id="@+id/button_stopProcess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/textview_log_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frag1_text_processing_log"
        android:textStyle="bold" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:fillViewport="true">

        <TextView
            android:id="@+id/textview_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />
    </androidx.core.widget.NestedScrollView>

</LinearLayout>
