<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/AddThumbsFragment">

    <fragment
        android:id="@+id/AddThumbsFragment"
        android:name="com.exifthumbnailadder.app.AddThumbsFragment"
        android:label="@string/action_add_thumbs"
        tools:layout="@layout/fragment_add_thumbs">

        <action
            android:id="@+id/action_AddThumbsFragment_to_SyncFragment"
            app:destination="@id/SyncFragment" />
        <action
            android:id="@+id/action_AddThumbsFragment_to_SettingsFragment"
            app:destination="@id/SettingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/SyncFragment"
        android:name="com.exifthumbnailadder.app.SyncFragment"
        android:label="@string/action_sync"
        tools:layout="@layout/fragment_sync">

        <action
            android:id="@+id/action_SyncFragment_to_AddThumbsFragment"
            app:destination="@id/AddThumbsFragment" />
        <action
            android:id="@+id/action_SyncFragment_to_SettingsFragment"
            app:destination="@id/SettingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/SettingsFragment"
        android:name="com.exifthumbnailadder.app.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_settings">

        <action
            android:id="@+id/action_SettingsFragment_to_AddThumbsFragment"
            app:destination="@id/AddThumbsFragment" />
        <action
            android:id="@+id/action_SettingsFragment_to_SyncFragment"
            app:destination="@id/SyncFragment" />
    </fragment>
</navigation>